Fixed icon alignment Changed the names of enums

--- a/SFSimulator.Web/src/app/layout/custom-schedule/custom-schedule.component.scss
+++ b/SFSimulator.Web/src/app/layout/custom-schedule/custom-schedule.component.scss
@@ -93,13 +93,13 @@ li:hover {
   width: 5rem;
   height: 5rem;
   font-size: 5rem;
-  line-height: 4.5rem;
+  line-height: 5rem;
 }
 
 .mat-icon {
-  vertical-align: middle;
-  align-self: center;
+ vertical-align: 50%;
 }
+
 
 // Actions & Events styles
 #BuyGriffin {
